fixed spacing

--- a/touchpanel-ui/src/app/app.component.css
+++ b/touchpanel-ui/src/app/app.component.css
@@ -71,6 +71,13 @@ html, body {
     width: 80%;
 }
 
+.input-devices {
+    margin-left: auto;
+    margin-right: auto;
+	justify-content: center;
+    width: 95%;
+}
+
 .sidebar {
 	display: flex;
 	flex-direction: column;
@@ -95,17 +102,9 @@ html, body {
 .input-device {
 	display: flex;
 	flex-direction: column;
-	justify-conent: center;
+	justify-content: center;
     align-items: center;
 }
-
-.input-device {
-
-}
-
-.aligncenter {
-    align-items:center; 
-} 
 
 .output-device i {
 	font-size: 16vh;
